--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,16 +38,16 @@
                 </svg>
               </span>
 
-              <span class="username">{{ site.twitter_username }}</span>
+              <!--<span class="username">{{ site.twitter_username }}</span>-->
             </a>
           </li>
           {% endif %}
         </ul>
       </div>
 
-      <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
-      </div>
+      <!--<div class="footer-col  footer-col-3">
+        //<p class="text">{{ site.description }}</p>
+      //</div>-->
     </div>
 
   </div>
