--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@
  */
 .site-header {
     border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-bottom: 1px solid $grey-color-dark;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -24,7 +24,9 @@
 }
 
 .site-nav {
-    float: right;
+    text-align: center;
+	justify-content: center;
+	align-items: center;
     line-height: 56px;
 
     .menu-icon {
