--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="wrapper">
-	<img src="/img/logo.jpg">
+	<img src="/img/logo.jpg" width="50%">
     
     <nav class="site-nav">
       <a href="#" class="menu-icon">
