--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,6 +5,9 @@
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-dark;
     min-height: 56px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
 
     // Positioning context for the mobile navigation icon
     position: relative;
