--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,7 +8,8 @@
 	text-align: center;
 	justify-content: center;
 	align-items: center;
-
+	background-color: grey-color-light;
+	color: white;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
