--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,7 +38,8 @@
     }
 
     .page-link {
-        color: $text-color;
+        //color: $text-color;
+		color: white;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
