--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -40,7 +40,7 @@
     .page-link {
         //color: $text-color;
 		color: white;
-		background-color: grey-color-light;
+		background-color: dimgray;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
