--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,7 +31,7 @@
 	justify-content: center;
 	align-items: center;
     line-height: 56px;
-	background-color: grey-color-light;
+	background-color: dimgray;
 	color: white;
     .menu-icon {
         display: none;
