--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,15 @@
 
       <div class="trigger">
 		<a class="page-link" href="../index.html">Start</a>
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+        {% for node in site.pages %}
+          
+		  {% if node.url == page.url %}
+		  <a class="page-link" href="{{ node.url | prepend: site.baseurl }}"><b>{{ node.title }}</b></a>
+		  {% else %}
+          <a class="page-link" href="{{ node.url | prepend: site.baseurl }}">{{ node.title }}</a>
           {% endif %}
-        {% endfor %}
+		  
+		  {% endfor %}
       </div>
     </nav>
 
