--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-
+<link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montez" rel="stylesheet">
     {% include header.html %}
 
     <div class="page-content">
@@ -14,7 +14,7 @@
     </div>
 
     {% include footer.html %}
-
+{% include analytics.html %}
   </body>
 
 </html>
