--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-dark;
+    //border-top: 5px solid $grey-color-dark;
+    //border-bottom: 1px solid $grey-color-dark;
     min-height: 56px;
 	text-align: center;
 	justify-content: center;
