--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,9 +44,9 @@
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
-        }
+        //&:not(:first-child) {
+            margin-left: 10px;
+        //}
     }
 
     @include media-query($on-palm) {
