--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       dimgray;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
