--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -204,6 +204,14 @@
 	justify-content: center;
 	align-items: center;
 }
+.right-image
+{
+    margin: 0 auto;
+    display: block;
+	text-align: right;
+	justify-content: right;
+	align-items: right;
+}
 
 /**
  * Posts
