--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-<link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montez|Italianno" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montez|Italianno|Farsan" rel="stylesheet">
     {% include header.html %}
 
     <div class="page-content">
